@@ -14,6 +14,8 @@ RELEASE 0.96 - XXX
 
   - Make the CacheDir() directory if it doesn't already exist.
 
+  - Allow construction variable substitutions in $LIBS specifications.
+
   From Tom Epperly:
 
   - Allow the Java() Builder to take more than one source directory.
